[project]
name = "de1-2025-project"
version = "0.1.0"
description = ""
authors = [
    {name = "deedeetdt",email = "pongsatorn.kam@student.mahidol.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

